--- a/css/index.css
+++ b/css/index.css
@@ -142,14 +142,12 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    height: 150px;
+    height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
     transition: all 0.4s ease;
     z-index: 10;
-    background: #35081D;
-    background: linear-gradient(180deg, rgba(53, 8, 29, 1) 28%, rgba(53, 8, 29, 0.59) 67%, rgba(53, 8, 29, 0) 100%);
 }
 
 .nav_back {
@@ -172,12 +170,11 @@ header {
 
 .nav h1 img {
     width: 150px;
-    height: 90px;
+    height: auto;
 }
 
 .nav_warp .logo-default {
     display: block;
-    height: 90px;
     transition: all 0.4s ease;
 }
 
@@ -200,7 +197,7 @@ header {
 .gnb p {
     color: #fff;
     font-family: "ns_regular";
-    font-size: 20px;
+    font-size: 18px;
     transition: all 0.4s ease;
 }
 
@@ -238,7 +235,7 @@ header {
 }
 
 .nav_warp:hover {
-    height: 80px;
+    height: 100px;
     background: #fff;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
@@ -387,6 +384,11 @@ header {
     box-sizing: border-box;
 }
 
+.menu_warp a,
+.store_menu_warp a {
+    display: contents;
+}
+
 .menu_bar,
 .store_menu_bar {
     display: flex;
@@ -445,7 +447,7 @@ header {
 
 .menu_list {
     width: 100%;
-    height: auto;
+    height: 350px;
     display: flex;
     justify-content: space-around;
     align-items: end;
@@ -457,6 +459,11 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: end;
+}
+
+.menu_list img,
+.store_menu_list img {
+    transition: transform 0.4s ease;
 }
 
 .menu_list img:hover,
@@ -662,6 +669,65 @@ header {
     height: 600px;
     display: flex;
     justify-content: center;
+    position: relative;
+}
+
+.slider4 img {
+    border-radius: 30px;
+}
+
+.slider4 span {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    background-color : rgb(255,255,255,0.8);
+    padding: 15px;
+    color: #57070A;
+    font-family: "power";
+    font-size: 25px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.silder_text h3 {
+    font-family: "power";
+    font-size: 25px;
+}
+
+.slider_main_text_red {
+    color: #57070A;
+}
+
+.slider_main_text_green {
+    color: #707B36;
+}
+
+.silder_text {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    background-color : rgb(255,255,255,0.8);
+    bottom: 0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 20px 0 20px 0;
+}
+
+
+.silder_text p {
+    font-family: "ns_regular";
+    font-size: 16px;
+    color: #333;
+    display: inline-block;
+    width: 400px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .slider_controls {
