--- a/css/sub_01.css
+++ b/css/sub_01.css
@@ -996,6 +996,14 @@ a#topBtn img {
     .footer_warp {
         margin-left: 0;
     }
+
+    .menu_list_warp ul {
+    margin-bottom: 80px;
+}
+
+.number ul {
+        padding-bottom: 80px;
+    }
 }
 
 @media (max-width:600px) {
@@ -1084,6 +1092,14 @@ a#topBtn img {
     .footer_list_01 {
         gap: 30px;
     }
+
+    .menu_list_warp ul {
+    margin-bottom: 60px;
+}
+
+.number ul {
+        padding-bottom: 60px;
+    }
 }
 
 @media (max-width:480px) {
@@ -1143,6 +1159,14 @@ a#topBtn img {
 .number ul b {
     font-size: 16px;
 }
+
+.menu_list_warp ul {
+    margin-bottom: 40px;
+}
+
+.number ul {
+        padding-bottom: 40px;
+    }
 }
 
 @media (max-width:400px) {
