--- a/css/index.css
+++ b/css/index.css
@@ -1515,9 +1515,9 @@ a#topBtn img {
 @media (max-width: 480px) {
 
     .nav p>.hamburger img {
-        top: 15px;
+        top: 40px;
+        transform: translate(-50%, -50%)
     }
-
     .nav,
     .nav_warp,
     .nav_warp.shrink,
