--- a/css/sub_02.css
+++ b/css/sub_02.css
@@ -325,7 +325,9 @@ main {
 .about_bottom {
     display: flex;
     gap: 70px;
+    width: 100%;
     align-items: center;
+    justify-content: space-around;
 }
 
 .About_title,
@@ -366,15 +368,10 @@ main {
     border-radius: 0 30px 30px 30px;
 }
 
-.about_middle img {
-    border-radius: 30px 0 30px 30px;
-    width: 500px;
-    height: auto;
-}
-
+.about_middle img,
 .about_bottom img {
-    border-radius: 0 30px 30px 30px;
-    width: 500px;
+    border-radius: 30px 0 30px 30px;
+    width: 700px;
     height: auto;
 }
 
@@ -506,7 +503,10 @@ a#topBtn img {
         object-fit: cover;
     }
 
-
+    .about_middle img,
+    .about_bottom img {
+        width: 500px;
+    }
 }
 
 @media (max-width:1450px) {
@@ -946,7 +946,8 @@ a#topBtn img {
 
 @media (max-width:480px) {
     .nav p>.hamburger img {
-        top: 15px;
+        top: 40px;
+        transform: translate(-50%, -50%)
     }
 
     .nav,
