--- a/css/index.css
+++ b/css/index.css
@@ -271,6 +271,7 @@ header {
     border-radius: 0 0 10px 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     z-index: 100;
+    overflow: hidden;
 }
 
 .gnb li:nth-child(3)>ul {
