--- a/css/sub_02.css
+++ b/css/sub_02.css
@@ -210,6 +210,7 @@ header {
     border-radius: 0 0 10px 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, .1);
     z-index: 100;
+    overflow: hidden;
 }
 
 .gnb li:nth-child(3)>ul {
@@ -365,12 +366,12 @@ main {
     width: 1440px;
     height: 300px;
     object-fit: cover;
-    border-radius: 0 30px 30px 30px;
+    border-radius: 80px 0 80px 0;
 }
 
 .about_middle img,
 .about_bottom img {
-    border-radius: 30px 0 30px 30px;
+    border-radius: 80px 0 80px 0;
     width: 700px;
     height: auto;
 }
@@ -680,7 +681,6 @@ a#topBtn img {
         display: inline-block;
     }
 
-    /* 모바일 메뉴 */
     .mobile-menu {
         display: block;
         position: fixed;
@@ -848,6 +848,11 @@ a#topBtn img {
 }
 
 @media (max-width:770px) {
+    .about_middle img,
+    .about_bottom img,
+    .About img {
+        border-radius: 30px 0 30px 0;
+}
 
     .visual {
         margin-top: 80px;
