--- a/css/sub_01.css
+++ b/css/sub_01.css
@@ -68,7 +68,6 @@ header {
     object-fit: cover;
 }
 
-/* ---------- Nav ---------- */
 .nav_warp {
     position: fixed;
     top: 0;
@@ -162,7 +161,6 @@ header {
     display: inline-block;
 }
 
-/* Hover 시 데스크톱 드롭다운 */
 .nav_warp:hover {
     height: 100px;
     background: #fff;
@@ -200,6 +198,7 @@ header {
     border-radius: 0 0 10px 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, .1);
     z-index: 100;
+    overflow: hidden;
 }
 
 .gnb li:nth-child(3)>ul {
@@ -239,7 +238,6 @@ header {
     font-size: 16px;
 }
 
-/* 스크롤 축소 상태 */
 .nav_warp.shrink {
     height: 80px;
     background: #fff url("../image/background.png") no-repeat;
@@ -270,7 +268,11 @@ header {
     transition: transform .4s ease;
 }
 
-/* ---------- Tabs ---------- */
+
+
+
+
+
 .store_sellect {
     position: relative;
     width: 100%;
@@ -344,7 +346,6 @@ header {
     font-family: "ns_semibold";
 }
 
-/* ---------- Menu cards ---------- */
 .menu_list_warp {
     width: 1440px;
     margin: 0 auto;
@@ -359,9 +360,7 @@ header {
     margin-bottom: 80px;
 }
 
-.cup_Icecream_menu li,
-.bar_Icecream_menu li,
-.sand_Cone_Icecream_menu li {
+.cup_Icecream_menu li {
     width: 300px;
     height: 430px;
     background: #fff;
@@ -373,24 +372,10 @@ header {
     flex-direction: column;
     gap: 30px;
     transition: transform .2s ease;
+    border: #fff solid 1px;
 }
 
-.icecream_Cake_menu li {
-    width: 300px;
-    height: 320px;
-    background: #fff;
-    box-shadow: 0 0 15px rgba(0, 0, 0, .08);
-    border-radius: 30px;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    flex-direction: column;
-    gap: 30px;
-    transition: transform .2s ease;
-}
-
-.creation_menu_list li,
-.drink_menu_list li {
+.creation_menu_list li {
     width: 300px;
     height: 380px;
     background: #fff;
@@ -402,20 +387,26 @@ header {
     flex-direction: column;
     gap: 30px;
     transition: transform .2s ease;
+    border: #fff solid 1px;
 }
 
 .menu_list_warp ul li:hover {
     transform: translateY(-4px);
+    border: #eed5df solid 1px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, .1);
+    transition: transform .2s ease;
 }
 
 .menu_list_warp ul li a {
     display: flex;
+    width: 100%;
+    height: 430px;
     flex-direction: column;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
     gap: 40px;
     text-align: center;
-    margin-bottom: 40px;
+    padding-bottom: 40px;
 }
 
 .menu_list_warp ul li p {
@@ -449,23 +440,29 @@ header {
     width: 10px;
 }
 
-.number ul li {
+.number ul a {
     font-family: "ns_regular";
     font-size: 16px;
     color: #666;
+}
+
+.small_number {
+    position: relative;
+    top: -2px;
 }
 
 .number ul b {
     font-family: "ns_semibold";
     font-size: 18px;
     color: #650A30;
+    position: relative;
+    top: -2px;
 }
 
 
 
 
 
-/* ---------- Footer ---------- */
 footer {
     width: 100vw;
     background: #35081D;
@@ -880,6 +877,12 @@ a#topBtn img {
     }
 }
 
+@media (max-width:776px) {
+    .menu_list_warp ul li {
+        width: 290px;
+    }
+}
+
 @media (max-width:770px) {
     .nav p>.hamburger img {
         top: 25px;
@@ -903,11 +906,6 @@ a#topBtn img {
 
     .Menu_sellect {
         margin: 60px 0 50px;
-    }
-
-    .menu_list_warp ul li a {
-        gap: 30px;
-        margin-bottom: 30px;
     }
 
     .store_sellect_warp {
@@ -941,7 +939,7 @@ a#topBtn img {
     }
 
     .menu_list_warp ul li {
-        width: calc(50% - 10px);
+        width: calc(45% - 10px);
     }
 
     .menu_list_warp ul li p {
@@ -955,19 +953,7 @@ a#topBtn img {
         max-width: 160px;
     }
 
-    .cup_Icecream_menu li,
-    .bar_Icecream_menu li,
-    .sand_Cone_Icecream_menu li {
-        width: 260px;
-        height: 280px;
-    }
-
-    .icecream_Cake_menu li {
-        width: 260px;
-        height: 280px;
-    }
-
-    .drink_menu_list li {
+    .cup_Icecream_menu li {
         width: 260px;
         height: 280px;
     }
@@ -975,6 +961,11 @@ a#topBtn img {
     .creation_menu_list li {
         width: 260px;
         height: 250px;
+    }
+
+    .menu_list_warp ul li a {
+        height: 280px;
+        padding-bottom: 25px;
     }
 
     .img_small img {
@@ -1048,9 +1039,7 @@ a#topBtn img {
         margin: 50px 0 20px;
     }
 
-    .cup_Icecream_menu li,
-    .bar_Icecream_menu li,
-    .sand_Cone_Icecream_menu li {
+    .cup_Icecream_menu li {
         height: 230px;
     }
 
@@ -1058,12 +1047,14 @@ a#topBtn img {
         height: 210px;
     }
 
-    .drink_menu_list li {
-        height: 240px;
-    }
-
     .creation_menu_list li {
         height: 200px;
+    }
+
+    .menu_list_warp ul li a {
+        height: 230px;
+        padding-bottom: 20px;
+        gap: 20px;
     }
 
     .menu_list_warp ul li img {
@@ -1077,11 +1068,6 @@ a#topBtn img {
 
     .cup_small img {
         max-height: 120px !important;
-    }
-
-    .menu_list_warp ul li a {
-        gap: 20px;
-        margin-bottom: 20px;
     }
 
     .menu_list_warp ul li p {
@@ -1184,22 +1170,19 @@ a#topBtn img {
         top: -80px;
     }
 
-    .cup_Icecream_menu li,
-    .bar_Icecream_menu li,
-    .sand_Cone_Icecream_menu li {
+    .cup_Icecream_menu li {
         height: 205px;
     }
 
-    .icecream_Cake_menu li {
-        height: 180px;
-    }
-
-    .drink_menu_list li {
-        height: 200px;
-    }
 
     .creation_menu_list li {
         height: 180px;
+    }
+
+    .menu_list_warp ul li a {
+        height: 207px;
+        padding-bottom: 15px;
+        gap: 15px;
     }
 
     .menu_list_warp ul li img {
@@ -1239,18 +1222,8 @@ a#topBtn img {
         gap: 30px;
     }
 
-    .cup_Icecream_menu li,
-    .bar_Icecream_menu li,
-    .sand_Cone_Icecream_menu li {
+    .cup_Icecream_menu li {
         height: 195px;
-    }
-
-    .icecream_Cake_menu li {
-        height: 170px;
-    }
-
-    .drink_menu_list li {
-        height: 190px;
     }
 
     .creation_menu_list li {
