--- a/css/index.css
+++ b/css/index.css
@@ -1553,9 +1553,10 @@ a#topBtn img {
     }
 
     .modal {
-        align-items: flex-start;
-        padding-top: 120px;
+        align-items: center;
         overflow: hidden;
+        padding-top: 10%;
+        padding-bottom: 10%;
     }
 
     .modal__box {
